--- a/rapport/glossaire.tex
+++ b/rapport/glossaire.tex
@@ -18,7 +18,7 @@
 }}
 
 \newglossaryentry{fulltext}{name={fulltext},
-                             description={Un drapeau, dans la dénomination logstash, le flag représente une option passé en argument exemple : -w.
+                             description={Recherche pertinante en fonction de l'indexation des termes de la recherche.
 }}
 
 \newglossaryentry{Munin}{name={Munin},
@@ -49,9 +49,9 @@
 }}
 
 
-\newglossaryentry{thread}{name={thread},
-                             description={explication thread processus etc.. 
-}}
+%\newglossaryentry{thread}{name={thread},
+%                             description={explication thread processus etc.. 
+%}}
 
 \newglossaryentry{type}{name={type},
                              description={Un type dans la terminologie elasticsearch est l'équivalent d'une table dans le modèle relationnel. Il est équivalent dans la mesure où il possède des champs contenant des valeurs
