on touche au but

--- a/rapport/images.tex
+++ b/rapport/images.tex
@@ -12,6 +12,13 @@
     \caption{Représentation du réseau Lothaire}
 \end{figure}
 
+\section{Emploi du temps}
+\begin{figure}[H]
+    \center
+    \includegraphics[height=0.8\textheight]{emploidutemps.png}
+    \label{fig:emploidutemps}
+    \caption{Emploi du temps approximatif du stage}
+\end{figure}
 
 \section{Images Kibana}
 \begin{figure}[H]
