--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -23,7 +23,7 @@ Elasticsearch et la stack ELK est en passe de devenir un standard dans l'industr
 En effet le logiciel à une utilisation assez versatile, de l'aide à la prise de 
 décision en temps réelle à l'analyse de code source. Et à l'heure actuelle, la capacité 
 à exploiter les masses de données et de méta données accumulées chaque jour devient 
-un enjeu économique majeur (mais pas seulement \ldots). Enfin l'un des principaux 
+un enjeu économique majeur. Enfin l'un des principaux 
 atouts d'Elasticsearch réside dans son aptitude à pouvoir passer à l'échelle simplement.
 
 \footnotesize{\emph{Attention, ce chapitre ne sera qu'une présentation très succinte des possibilités 
