--- a/rapport/kibana.tex
+++ b/rapport/kibana.tex
@@ -94,9 +94,8 @@ l'année). Il est également possible de choisir un intervalle de temps absolu, 
 la seconde près.
 
 Enfin il est possible de rafraichir ces données en choisissant un intervalle allant
-de 5 secondes à une journée (également désactivable).
-
-Voir tableau des champs p\pageref{fig:kibanatuto4}
+de 5 secondes à une journée (également désactivable).\\[2mm]
+Voir \textbf{tableau des champs} p\pageref{fig:kibanatuto4}\\[2mm]
 
 Le tableau des champs disponibles dans l'index est très pratique pour rendre plus 
 lisible les informations que l'on recherche ainsi que pour obtenir des statistiques 
