--- a/rapport/title.tex
+++ b/rapport/title.tex
@@ -48,7 +48,7 @@ Vincent \textsc{Delove}
 
 \vspace{3mm}
 % Bottom of the page
-Stage effectué à la \textbf{Sous Direction Infrastructures}\\rue du Doyen Marcel Roubault, 54500 \textsc{Vandoeuvre lès Nancy}\\
+Stage effectué à la \textbf{Sous Direction des Infrastructures}\\rue du Doyen Marcel Roubault, 54500 \textsc{Vandoeuvre lès Nancy}\\
 {Compilé le \today}\\[5mm]%Lundi 23 Mars 2015}
 Année Scolaire \textbf{2014-2015}%Lundi 23 Mars 2015
 
